--- a/index.html
+++ b/index.html
@@ -151,18 +151,18 @@
         <p class="section-desc">Un aperçu rapide. Plus sur mon GitHub.</p>
         <div class="grid">
             <article class="project card reveal">
-                <img alt="Aperçu projet 1" src="data:image/svg+xml;utf8,<?xml version='1.0'?><svg xmlns='http://www.w3.org/2000/svg' width='800' height='500'><rect width='100%' height='100%' fill='%2322262b'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' fill='white' font-family='Inter' font-size='24'>Projet React — Dashboard</text></svg>">
+                <img alt="Aperçu projet 1" src="assets/card.jpg" width="50%" height="50%">
                 <h4>Dashboard analytics</h4>
                 <div class="stack">React • Charts • API</div>
             </article>
             <article class="project card reveal">
-                <img alt="Aperçu projet 2" src="data:image/svg+xml;utf8,<?xml version='1.0'?><svg xmlns='http://www.w3.org/2000/svg' width='800' height='500'><rect width='100%' height='100%' fill='%2322262b'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' fill='white' font-family='Inter' font-size='24'>Site vitrine — PME</text></svg>">
+                <img alt="Aperçu projet 2" src="assets/site.jpg" width="50%" height="50%">
                 <h4>Site vitrine PME</h4>
                 <div class="stack">HTML/CSS/JS • SEO</div>
             </article>
             <article class="project card reveal">
-                <img alt="Aperçu projet 3" src="data:image/svg+xml;utf8,<?xml version='1.0'?><svg xmlns='http://www.w3.org/2000/svg' width='800' height='500'><rect width='100%' height='100%' fill='%2322262b'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' fill='white' font-family='Inter' font-size='24'>Module Odoo — Stocks</text></svg>">
-                <h4>Module Odoo — Stocks</h4>
+                <img alt="Aperçu projet 3" src="assets/pos.png" width="50%" height="50%">
+                <h4>Module Odoo — Point de Vente</h4>
             </article>
         </div>
         <div style="margin-top:18px">
@@ -179,7 +179,7 @@
                 <h3>Coordonnées</h3>
                 <p>
                     <strong>Email :</strong> <a href="mailto:contact@e-services.cd">emmanuelmpunga.23@gmail.com</a><br>
-                    <strong>Téléphone :</strong> <a href="tel:+243895117815">+243 998 15 43 23</a><br>
+                    <strong>Téléphone :</strong> <a href="tel:+243895117815">+243 998 154 323</a><br>
                     <strong>Ville :</strong> Kinshasa, RDC
                 </p>
                 <p>
@@ -209,7 +209,6 @@
     <footer>
         <div class="container" style="display:flex; align-items:center; justify-content:space-between; gap:12px; flex-wrap:wrap">
             <div>© <span id="year"></span> Emmanuel Mpunga — Tous droits réservés.</div>
-            <div style="opacity:.75">Construit avec <strong>HTML</strong>, <strong>CSS</strong> & <strong>JS</strong>.</div>
         </div>
     </footer>
     <script src="script.js"></script>
