--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
             <div>
                 <h3>Coordonnées</h3>
                 <p>
-                    <strong>Email :</strong> <a href="mailto:contact@e-services.cd">emmanuelmpunga.23@gmail.com</a><br>
-                    <strong>Téléphone :</strong> <a href="tel:+243895117815">+243 998 154 323</a><br>
+                    <strong>Email :</strong> <a href="mailto:emmanuelmpunga.23@gmail.com">emmanuel mpunga</a><br>
+                    <strong>Téléphone :</strong> <a href="tel:+243998154323">+243 998 154 323</a><br>
                     <strong>Ville :</strong> Kinshasa, RDC
                 </p>
                 <p>
-                    <a href="#" aria-label="LinkedIn">LinkedIn</a> ·
-                    <a href="#" aria-label="GitHub">GitHub</a> ·
-                    <a href="#" aria-label="Facebook">Facebook</a>
+                    <a href="https://www.linkedin.com/in/emmanuel-mpunga-a22b4a149/" aria-label="LinkedIn">LinkedIn</a> ·
+                    <a href="https://github.com/Mpunga" aria-label="GitHub">GitHub</a> ·
+                    <a href="https://www.facebook.com/EservicesTech" aria-label="Facebook">Facebook</a>
                 </p>
             </div>
             <form onsubmit="sendEmail(event)">
