--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </div>
             <div class="card avatar" aria-hidden="true">
                 <!-- Simple avatar placeholder (SVG) -->
+                 <img src="assets/avatar.png" alt="image de Emmanuel Mpunga" class="avatar">
                 <svg viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
           <circle cx="128" cy="96" r="48" opacity=".9"/>
           <rect x="40" y="156" width="176" height="72" rx="36" opacity=".8"/>
